--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ laboratory/LB5/Mustang.X/
 laboratory/LB6/LAB05_display.X
 laboratory/LB6/LAB05.X
 laboratory/LB6/LB6.X
-laboratory/LB7/
+laboratory/LB7/LCD_driver.X
 laboratory/LB8/
 laboratory/LB9/
 laboratory/LB10/
